<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userName"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_bg"
            android:theme="@style/Theme.AICuisine"
            tools:context=".ui.main.MainFragment">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{userName}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/breakfast_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:textColor="#ffffff"
                app:backgroundTint="@color/blue"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lunch_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:textColor="#ffffff"
                app:backgroundTint="@color/orange"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/breakfast_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dinner_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:textColor="#ffffff"
                app:backgroundTint="@color/pink"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lunch_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/snack_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snack"
                android:textColor="#ffffff"
                app:backgroundTint="@color/green"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dinner_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>